# vpos

./: .gitignore  FINAL_PROJECT_REPORT.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
examples/config/: cards.catalog.example.json  paynkolay-settings.example.json
examples/scenarios/: payment_scenarios.json  sandbox_e2e_scenarios.example.json  test_matrix_cases.csv
guide/: HANDOFF.md  PROJECT_GAP_ANALYSIS.md  PROJECT_MEMORY.md  README_LEARNING.md  SANDBOX_SKELETON.md
src/paynkolay_pos/: __init__.py
src/paynkolay_pos/api/: __init__.py  app.py  dependencies.py  parallel_run_store.py  payment_initializer.py  payment_list_retry.py  payment_results.py  schemas.py  session_models.py  session_store.py  three_ds_store.py
src/paynkolay_pos/callbacks/: __init__.py  receiver.py  store.py  verifier.py
src/paynkolay_pos/clients/: __init__.py  paynkolay_client.py
src/paynkolay_pos/config/: __init__.py  private_template.py  settings.py
src/paynkolay_pos/diagnostics/: __init__.py  result_matrix.py
src/paynkolay_pos/flows/: __init__.py  error_interceptor.py  payment_flow.py
src/paynkolay_pos/models/: __init__.py  callbacks.py  payments.py  paynkolay_results.py
src/paynkolay_pos/reporting/: __init__.py  evidence.py  external_logger.py
src/paynkolay_pos/sandbox/: __init__.py  readiness.py
src/paynkolay_pos/scenarios/: __init__.py  error_matrix.py  payments.py  private_catalog.py
src/paynkolay_pos/security/: __init__.py  paynkolay_hashes.py  signatures.py
src/paynkolay_pos/testing/: __init__.py  card_behaviors.py  credential_matrix.py  factories.py  real_cards.py  (+2 more)
tests/api/: test_callback_routes.py  test_dependencies.py  test_payment_initializer.py  test_result_routes.py  test_session_store.py  test_three_ds_routes.py  test_web_app.py
tests/callbacks/: test_receiver.py  test_store.py  test_verifier.py
tests/clients/: test_paynkolay_client.py
tests/config/: test_private_template.py  test_settings.py
tests/diagnostics/: test_result_matrix.py
tests/e2e/: test_data_driven_payment_scenarios.py  test_mocked_payment_lifecycle.py
tests/flows/: test_error_interceptor.py  test_payment_flow.py
tests/models/: test_callbacks.py  test_payments.py  test_paynkolay_results.py
tests/reporting/: test_evidence.py  test_external_logger.py
tests/sandbox/: test_readiness.py  test_sandbox_e2e_skeleton.py
tests/scenarios/: test_payment_scenarios.py  test_private_catalog.py
tests/security/: test_paynkolay_hashes.py  test_signatures.py
tests/testing/: test_card_behaviors.py  test_credential_matrix.py  test_factories.py  test_synthetic_cards.py  test_synthetic_scenarios.py
tests/three_ds/: conftest.py  test_acs_action.py  test_acs_browser.py  test_acs_profile.py  test_challenge.py  test_challenge_browser.py  test_form_renderer.py  test_otp_resolver.py
tests/tools/: test_run_uat_3ds_smoke.py  test_run_uat_parallel_3ds_smoke.py
tools/: bootstrap_private_config.py  bootstrap_private_scenarios.py  build_combined_cards.py  build_credential_config.py  build_credential_matrix.py  build_credential_scenarios.py  build_real_card_scenarios.py  build_result_matrix_template.py  generate_synthetic_cards.py  generate_synthetic_scenarios.py  query_uat_payment_list.py  run_uat_3ds_smoke.py  run_uat_cancel_smoke.py  run_uat_parallel_3ds_smoke.py  run_uat_payment_smoke.py  summarize_parallel_evidence.py  validate_sandbox_readiness.py
(+31 files in other folders)
