[project]
name = "paynkolay-sanal-pos-automation"
version = "0.1.0"
description = "Paynkolay Sanal POS automation and test framework"
authors = [{ name = "Paynkolay QA Automation Team" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.0)",
    "httpx>=0.28.0,<0.29.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.12,<1.0.0",
]

[tool.poetry]
packages = [{ include = "paynkolay_pos", from = "src" }]
include = [
    { path = "src/paynkolay_pos/web/templates/*.html", format = ["sdist", "wheel"] },
    { path = "src/paynkolay_pos/web/static/*.svg", format = ["sdist", "wheel"] },
    { path = "src/paynkolay_pos/web/static/css/*.css", format = ["sdist", "wheel"] },
    { path = "src/paynkolay_pos/web/static/js/*.js", format = ["sdist", "wheel"] },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-xdist = "^3.6.0"
playwright = "^1.49.0"
allure-pytest = "^2.13.5"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "smoke: fast checks for framework wiring and critical payment paths",
    "config: configuration parsing and validation tests",
    "api: Sanal POS API tests",
    "three_ds: 3D Secure browser automation tests",
    "callback: callback and webhook verification tests",
    "scenario: data-driven payment scenario catalogue tests",
    "negative: invalid payment and security scenarios",
    "moto: Mail Order/Telephone Order payment scenarios",
    "sandbox: tests that require a private Paynkolay sandbox configuration",
    "live_e2e: guarded tests that may call external Paynkolay sandbox services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
